modualized report dashboard iniline styles into scss file. fixed alignment problem on report width within report dashboard as well

--- a/app/src/scss/_reportDashboard.scss
+++ b/app/src/scss/_reportDashboard.scss
@@ -2,10 +2,12 @@
     visibility: hidden;
   }
 
+
+
   .frameDiv{
     justify-content: center;
     align-items: center;
-    width: 85vw;
+    width: 70%;
     background: #ccc;
     overflow: scroll;
     font-family: sans-serif;
@@ -123,7 +125,7 @@
     }
 
     .VWO .line-chart{
-      margin-top: 10px;
+      // margin-top: 10px;
       margin-bottom: 10px;
       float: left;
     }
